# streamlit-pizza-predictor

./: .gitignore  app.py  pyproject.toml  testes.ipynb
